--- a/JustMovedGit/packages.config
+++ b/JustMovedGit/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid71" />
   <package id="SQLite" version="3.13.0" targetFramework="monoandroid71" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid71" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid71" />
