--- a/JustMovedGit/JustMovedGit.csproj
+++ b/JustMovedGit/JustMovedGit.csproj
@@ -75,14 +75,22 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activities\ReceptenMenuActivity.cs" />
+    <Compile Include="Activities\Items\ReceptenActivity.cs" />
+    <Compile Include="Activities\Menus\BudgetMenuActivity.cs" />
+    <Compile Include="Activities\Menus\FavorietenMenuActivity.cs" />
+    <Compile Include="Activities\Menus\HuishoudenMenuActivity.cs" />
+    <Compile Include="Activities\Menus\PlannenMenuActivity.cs" />
+    <Compile Include="Activities\Menus\ReceptenMenuActivity.cs" />
+    <Compile Include="Activities\Menus\VeiligheidMenuActivity.cs" />
+    <Compile Include="Adapters\ReceptenAdapter.cs" />
     <Compile Include="Classes\Budget.cs" />
     <Compile Include="Classes\Huishouden.cs" />
     <Compile Include="Classes\Plannen.cs" />
     <Compile Include="Classes\Recept.cs" />
     <Compile Include="Classes\Veiligheid.cs" />
-    <Compile Include="DbCopyCheck.cs" />
+    <Compile Include="DbHandler.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Models\ReceptModel.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -102,6 +110,7 @@
     <AndroidResource Include="Resources\layout\Main.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\test.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
