sorry nog een keer

--- a/JustMovedGit/JustMovedGit.csproj
+++ b/JustMovedGit/JustMovedGit.csproj
@@ -103,6 +103,7 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activities\Items\NewMaandActivity.cs" />
     <Compile Include="Activities\Items\HuishoudenActivity.cs" />
     <Compile Include="Activities\Items\KostenActivity.cs" />
     <Compile Include="Activities\Items\VeiligheidActivity.cs" />
